Skip to content

2.2 regression: avformat NULL dereference

Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread 1424.0x9a8]
0x000000006765dec9 in CmdExecuteSend (p_out=0x5d91d90, p_cmd=0x6e5fae0)
    at ../../extras/package/win32/../../../src/input/es_out_timeshift.c:1273
1273    ../../extras/package/win32/../../../src/input/es_out_timeshift.c: No such file or directory.
(gdb) bt
[#0](https://code.videolan.org/videolan/vlc/-/issues/0)  0x000000006765dec9 in CmdExecuteSend (p_out=0x5d91d90, p_cmd=0x6e5fae0)
    at ../../extras/package/win32/../../../src/input/es_out_timeshift.c:1273
[#1](https://code.videolan.org/videolan/vlc/-/issues/1)  0x000000006765f059 in Send (p_out=0x5a5d020, _es=0xbaadf00dbaadf00d, p_block=0x5fb61b0)
    at ../../extras/package/win32/../../../src/input/es_out_timeshift.c:420
[#2](https://code.videolan.org/videolan/vlc/-/issues/2)  0x000000000726c1a1 in es_out_Send (p_block=0x5fb61b0, id=<optimized out>, out=0x5a5d020)
    at ../../extras/package/win32/../../../include/vlc_es_out.h:121
[#3](https://code.videolan.org/videolan/vlc/-/issues/3)  Demux (p_demux=p_demux@entry=0x5fd2c20)
    at ../../extras/package/win32/../../../modules/demux/avformat/demux.c:795
[#4](https://code.videolan.org/videolan/vlc/-/issues/4)  0x0000000067666c0e in demux_Demux (p_demux=0x5fd2c20)
    at ../../extras/package/win32/../../../src/input/demux.h:44
[#5](https://code.videolan.org/videolan/vlc/-/issues/5)  MainLoopDemux (i_start_mdate=44114152000, pb_demux_polled=<synthetic pointer>, pb_changed=<synthetic pointer>, p_input=<optimized out>)
    at ../../extras/package/win32/../../../src/input/input.c:557
[#6](https://code.videolan.org/videolan/vlc/-/issues/6)  MainLoop (p_input=p_input@entry=0x5f70790, b_interactive=b_interactive@entry=true)
    at ../../extras/package/win32/../../../src/input/input.c:722
[#7](https://code.videolan.org/videolan/vlc/-/issues/7)  0x000000006766744d in Run (obj=0x5f70790)
    at ../../extras/package/win32/../../../src/input/input.c:519
[#8](https://code.videolan.org/videolan/vlc/-/issues/8)  0x00000000676b3c52 in vlc_entry (p=0x5d91c60)
    at ../../extras/package/win32/../../../src/win32/thread.c:472
[#9](https://code.videolan.org/videolan/vlc/-/issues/9)  0x00007ffe459a9967 in sinf () from C:\Windows\system32\msvcrt.dll
[#10](https://code.videolan.org/videolan/vlc/-/issues/10) 0x00007ffe45a1f8b0 in msvcrt!__badioinfo ()
   from C:\Windows\system32\msvcrt.dll
[#11](https://code.videolan.org/videolan/vlc/-/issues/11) 0x0000000000000000 in ?? ()
Edited by Rémi Denis-Courmont
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information