avformat: always insert a track in the table (fixes #11931)

This seems necessary to maintain the mapping of libav's packet stream
index to the VLC plugin's tracks table offset.